# OverlayTranslator

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  dto.py  exceptions.py  logger.py  service.py  settings.py
app/core/: logger.py
app/manga_translator/: __init__.py
app/manga_translator/detection/: __init__.py  common.py  default.py
app/manga_translator/detection/default_utils/: __init__.py  model.py  utils.py
app/manga_translator/ocr/: __init__.py  common.py  config.py  model_48px.py  xpos_relative_position.py
app/manga_translator/textline_merge/: __init__.py
app/manga_translator/translators/: common.py  deep_translator.py  deep_translator_wrapper.py
app/manga_translator/utils/: __init__.py  generic.py  inference.py  log.py  sort.py  textblock.py
app/server/: __init__.py  app.py  launcher.py  pipeline_manager.py  schemas.py
tests/: conftest.py  test_cli.py  test_server.py
